Back button on top of the game page to avoid issues on smaller viewports.

--- a/css/main.css
+++ b/css/main.css
@@ -100,8 +100,7 @@ body {
 }
 
 .back-to-projects{
-    position: absolute;
-    bottom: 0;
+    
 }
 
 /* Texts */
